added and confirmed all tests are working

--- a/index.html
+++ b/index.html
@@ -15,15 +15,26 @@
   </head>
   <body>
     <h1 class="text-center bg-primary p-3">My Team</h1>
-    <main id="main">
-      <div class="bg-secondary">
-        <h2>Name</h2>
-        <h3>Title</h3>
-        <p>ID:</p>
-        <p>Email:</p>
-        <p>Office Number</p>
+    <div class="d-flex justify-content-center">
+      <div class="row">
+        <main id="main">
+          <div class="bg-secondary text-center p-3 m-3 rounded">
+            <h2>Bradley</h2>
+            <h3>Manager</h3>
+            <p>ID:452</p>
+            <p>Email:bradleyrodriguez77@gmail.com</p>
+            <p>345</p>
+          </div>
+          <div class="bg-secondary text-center">
+            <h2>Name</h2>
+            <h3>Title</h3>
+            <p>ID:</p>
+            <p>Email:</p>
+            <p>Office Number</p>
+          </div>
+        </main>
       </div>
-    </main>
+    </div>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
