added new styling for created html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-secondary">
     <h1 class="text-center bg-primary p-3">My Team</h1>
     <div class="d-flex justify-content-center">
       <div class="row">
         <main id="main">
-          <div class="bg-secondary text-center p-3 m-3 rounded">
+          <div class="bg-light text-center p-3 m-3 rounded">
             <h2>Bradley</h2>
             <h3>Manager</h3>
             <p>ID:452</p>
-            <p>Email:bradleyrodriguez77@gmail.com</p>
-            <p>345</p>
+            <a href="mailto: bradleyrodriguez77@gmail.com"
+              >Email:bradleyrodriguez77@gmail.com</a
+            >
+            <p>Office#:345</p>
           </div>
           <div class="bg-secondary text-center">
             <h2>Name</h2>
